--- a/index.html
+++ b/index.html
@@ -27,12 +27,42 @@
       </button>
     </header>
     <nav class="menu-lateral">
-      <img src="assets/img/logo.svg" alt="Logotipo da HZC" class="menu-lateral__logo" /><a href="#"class="menu-lateral__link, menu-lateral__link--inicio, .menu-lateral__link--ativo" >Inicio</a
-      ><a href="#" class="menu-lateral__link, menu-lateral__link--videos">Videos</a
-      ><a href="#" class="menu-lateral__link, menu-lateral__link--picos">Picos</a
-      ><a href="#" class="menu-lateral__link, menu-lateral__link--integrantes">Integrantes</a
-      ><a href="#" class="menu-lateral__link, menu-lateral__link--camisas">Camisas</a
-      ><a href="#" class="menu-lateral__link, menu-lateral__link--pinturas">Pinturas</a>
+      <img
+        src="assets/img/logo.svg"
+        alt="Logotipo da HZC"
+        class="menu-lateral__logo"
+      >
+      <a
+        href="#"
+        class="menu-lateral__link menu-lateral__link--inicio menu-lateral__link--ativo"
+        >Inicio</a
+      ><a href="#" class="menu-lateral__link menu-lateral__link--videos"
+        >Videos</a
+      ><a href="#" class="menu-lateral__link menu-lateral__link--picos"
+        >Picos</a
+      ><a href="#" class="menu-lateral__link menu-lateral__link--integrantes"
+        >Integrantes</a
+      ><a href="#" class="menu-lateral__link menu-lateral__link--camisas"
+        >Camisas</a
+      ><a href="#" class="menu-lateral__link menu-lateral__link--pinturas"
+        >Pinturas</a
+      >
     </nav>
+    <main class="principal">
+      <h2 class="titulo-pagina">Início</h2>
+      <article class="cartao">
+        <img src="./assets/img/banner-mobile_1.png" alt="banner do cartão" class="cartao__imagem">
+        <div class="cartao__conteudo">
+          <p class="cartao__destaque">Video em destaque</p>
+          <h3 class="cartao__titulo">HZC - Título</h3>
+          <p class="cartao__perfil">Bruno Lopez</p>
+          <p class="cartao__info cartao__info--tempo">33 minutos</p>
+          <p class="cartao__info cartao__info--visualizacao">33 visualizações</p>
+          <button class="cartao__botao cartao__botao--play cartao__botao--destaque">Assistir agora</button>
+        </div>
+
+      </article>
+    </main>
+    <script src="./index.js"></script>
   </body>
 </html>
