--- a/index.html
+++ b/index.html
@@ -31,15 +31,14 @@
         src="assets/img/logo.svg"
         alt="Logotipo da HZC"
         class="menu-lateral__logo"
-      >
+      />
       <a
         href="#"
         class="menu-lateral__link menu-lateral__link--inicio menu-lateral__link--ativo"
         >Inicio</a
       ><a href="#" class="menu-lateral__link menu-lateral__link--videos"
         >Videos</a
-      ><a href="#" class="menu-lateral__link menu-lateral__link--picos"
-        >Picos</a
+      ><a href="#" class="menu-lateral__link menu-lateral__link--picos">Picos</a
       ><a href="#" class="menu-lateral__link menu-lateral__link--integrantes"
         >Integrantes</a
       ><a href="#" class="menu-lateral__link menu-lateral__link--camisas"
@@ -50,18 +49,137 @@
     </nav>
     <main class="principal">
       <h2 class="titulo-pagina">Início</h2>
-      <article class="cartao">
-        <img src="./assets/img/banner-mobile_1.png" alt="banner do cartão" class="cartao__imagem">
+      <article class="cartao cartao--destaque">
+        <img
+          src="./assets/img/banner-mobile_1.png"
+          alt="banner do cartão"
+          class="cartao__imagem"
+        />
         <div class="cartao__conteudo">
           <p class="cartao__destaque">Video em destaque</p>
           <h3 class="cartao__titulo">HZC - Título</h3>
           <p class="cartao__perfil">Bruno Lopez</p>
           <p class="cartao__info cartao__info--tempo">33 minutos</p>
-          <p class="cartao__info cartao__info--visualizacao">33 visualizações</p>
-          <button class="cartao__botao cartao__botao--play cartao__botao--destaque">Assistir agora</button>
+          <p class="cartao__info cartao__info--visualizacao">
+            33 visualizações
+          </p>
+          <button
+            class="cartao__botao cartao__botao--play cartao__botao--destaque"
+          >
+            Assistir agora
+          </button>
         </div>
-
       </article>
+      <section class="secao">
+        <h3 class="titulo-secao">Videos mais vistos</h3>
+        <article class="cartao">
+          <img
+            src="./assets/img/video_1.png"
+            alt="Video 1"
+            class="cartao__imagem"
+          />
+          <div class="cartao__conteudo">
+            <p class="cartao__perfil">Bruno Lopez</p>
+            <h3 class="cartao__titulo">HZC - Título</h3>
+            <p class="cartao__info cartao__info--tempo">33 minutos</p>
+            <button class="cartao__botao cartao__botao--play" aria-label="Assistir agora"></button>
+          </div>
+        </article>
+        <article class="cartao">
+          <img
+            src="./assets/img/video_1.png"
+            alt="Video 1"
+            class="cartao__imagem"
+          />
+          <div class="cartao__conteudo">
+            <p class="cartao__perfil">Bruno Lopez</p>
+            <h3 class="cartao__titulo">HZC - Título</h3>
+            <p class="cartao__info cartao__info--tempo">33 minutos</p>
+            <button class="cartao__botao cartao__botao--play" aria-label="Assistir agora"></button>
+          </div>
+        </article>
+        <article class="cartao">
+          <img
+            src="./assets/img/video_1.png"
+            alt="Video 1"
+            class="cartao__imagem"
+          />
+          <div class="cartao__conteudo">
+            <p class="cartao__perfil">Bruno Lopez</p>
+            <h3 class="cartao__titulo">HZC - Título</h3>
+            <p class="cartao__info cartao__info--tempo">33 minutos</p>
+            <button class="cartao__botao cartao__botao--play" aria-label="Assistir agora"></button>
+          </div>
+        </article>
+        <article class="cartao">
+          <img
+            src="./assets/img/video_1.png"
+            alt="Video 1"
+            class="cartao__imagem"
+          />
+          <div class="cartao__conteudo">
+            <p class="cartao__perfil">Bruno Lopez</p>
+            <h3 class="cartao__titulo">HZC - Título</h3>
+            <p class="cartao__info cartao__info--tempo">33 minutos</p>
+            <button class="cartao__botao cartao__botao--play" aria-label="Assistir agora"></button>
+          </div>
+        </article>
+      </section>
+      <section class="secao">
+        <h3 class="titulo-secao">Videos mais vistos</h3>
+        <article class="cartao">
+          <img
+            src="./assets/img/video_1.png"
+            alt="Video 1"
+            class="cartao__imagem"
+          />
+          <div class="cartao__conteudo">
+            <p class="cartao__perfil">Bruno Lopez</p>
+            <h3 class="cartao__titulo">HZC - Título</h3>
+            <p class="cartao__info cartao__info--tempo">33 minutos</p>
+            <button class="cartao__botao cartao__botao--play" aria-label="Assistir agora"></button>
+          </div>
+        </article>
+        <article class="cartao">
+          <img
+            src="./assets/img/video_1.png"
+            alt="Video 1"
+            class="cartao__imagem"
+          />
+          <div class="cartao__conteudo">
+            <p class="cartao__perfil">Bruno Lopez</p>
+            <h3 class="cartao__titulo">HZC - Título</h3>
+            <p class="cartao__info cartao__info--tempo">33 minutos</p>
+            <button class="cartao__botao cartao__botao--play" aria-label="Assistir agora"></button>
+          </div>
+        </article>
+        <article class="cartao">
+          <img
+            src="./assets/img/video_1.png"
+            alt="Video 1"
+            class="cartao__imagem"
+          />
+          <div class="cartao__conteudo">
+            <p class="cartao__perfil">Bruno Lopez</p>
+            <h3 class="cartao__titulo">HZC - Título</h3>
+            <p class="cartao__info cartao__info--tempo">33 minutos</p>
+            <button class="cartao__botao cartao__botao--play" aria-label="Assistir agora"></button>
+          </div>
+        </article>
+        <article class="cartao">
+          <img
+            src="./assets/img/video_1.png"
+            alt="Video 1"
+            class="cartao__imagem"
+          />
+          <div class="cartao__conteudo">
+            <p class="cartao__perfil">Bruno Lopez</p>
+            <h3 class="cartao__titulo">HZC - Título</h3>
+            <p class="cartao__info cartao__info--tempo">33 minutos</p>
+            <button class="cartao__botao cartao__botao--play" aria-label="Assistir agora"></button>
+          </div>
+        </article>
+      </section>
     </main>
     <script src="./index.js"></script>
   </body>
